# rust-template

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  default.nix  flake.nix  justfile  package.xml
.cargo/: config.sample.toml  config.toml
.github/workflows/: ci.yml
.sqlx/: query-297e94e2258bca1971264392f93a03055684ab1cae1351680512db573e47ad47.json  query-5b482166aceb74f6e20e8c46e7f91c43bfa74e76252a45c9ab1e042aa952d0f2.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-9dab415d4dea7d598db8b51d9d7a3aa2d48fd4b5d8492f759208ac5d3e5d2893.json
config/: default.yaml
migrations/: 20241105080213_create_todos_table.sql
src/: app.rs  error.rs  extractor.rs  lib.rs  main.rs  settings.rs  telemetry.rs
src/models/: todo.rs
src/routes/: mod.rs  not_found.rs  probes.rs  todo.rs
tests/: probes.rs  todos.rs
tests/common/: utils.rs
tests/fixtures/: todos.sql
web/: index.html
