[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
opentelemetry = { version = "0.26.0", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = { version = "0.26.0", features = ["log"], default-features = false }
opentelemetry-otlp = { version = "0.26.0", features = ["tonic", "trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "trace", "metrics", "logs"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12.3"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "request-id", "util"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.9"
