[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandbox"
harness = false  # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.22"
esp-idf-svc = { version = "0.49.1", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Necessary until a new version of `esp-idf-sys` is released
